--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,17 @@
 page-home {
+    .btn{
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        border: 1px solid blue;
+        padding: 20%;
+    }
 
+    .button-round-md {
+        border-radius: 50px;
+        padding: 40px 40px;
+    }
+
+
+  
 }
